# zephyr

./: west.yml
boards/arm/mimxrt1170_fmurt7/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  flexspi_nor_config.c  mimxrt1170_fmurt7-pinctrl.dtsi  mimxrt1170_fmurt7.dts  mimxrt1170_fmurt7.dtsi  mimxrt1170_fmurt7.yaml  mimxrt1170_fmurt7_defconfig
boards/arm/mr_canhubk3/: mr_canhubk3.dts
boards/nxp/imx95_evk/: board.cmake
boards/nxp/mr_canhubk3/: mr_canhubk3.dts
doc/releases/: migration-guide-4.2.rst
drivers/clock_control/: clock_control_mcux_ccm_rev2.c
drivers/flash/: flash_mcux_flexspi_mx25um51345g.c
drivers/gnss/: CMakeLists.txt  gnss_u_blox_m8.c
drivers/i3c/: i3c_mcux.c
drivers/input/: CMakeLists.txt  Kconfig  Kconfig.crsf  Kconfig.sbus  input_crsf.c  input_sbus.c
drivers/led_strip/: CMakeLists.txt  Kconfig  Kconfig.sk9822  sk9822.c
drivers/mdio/: Kconfig.nxp_s32_gmac  mdio_nxp_s32_gmac.c
drivers/misc/: CMakeLists.txt  Kconfig
drivers/pwm/: CMakeLists.txt  Kconfig  Kconfig.mcux_gpt  pwm_mcux_gpt.c  pwm_mcux_qtmr.c  pwm_shell.c
drivers/sensor/: sensor_shell.c
drivers/serial/: uart_mcux_lpuart.c
dts/bindings/: vendor-prefixes.txt
include/zephyr/fs/: fs.h  (+1 more)
kernel/: init.c  thread.c
samples/sensor/udp_streaming/: CMakeLists.txt  prj.conf
samples/sensor/udp_streaming/boards/: mr_mcxn_t1_mcxn947_cpu0.conf  mr_mcxn_t1_mcxn947_cpu0.overlay  vmu_rt1170_mimxrt1176_cm7.conf  vmu_rt1170_mimxrt1176_cm7.overlay
samples/sensor/udp_streaming/src/: main.c
subsys/fs/: CMakeLists.txt  Kconfig  rpmsgfs_fs.c  shell.c
subsys/modem/: modem_ubx.c
(+153 files in other folders)
